--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1170,7 +1170,7 @@
     "assets.mimetypes.application/epub_zip": "EPUB ebook",
     "assets.mimetypes.application/msword": "Word document",
     "assets.mimetypes.application/pdf": "PDF document",
-    "assets.mimetypes.application/vnd.moodle.backup": "Moodle backup",
+    "assets.mimetypes.application/vnd.moodle.backup": "TheBritishDiction backup",
     "assets.mimetypes.application/vnd.ms-excel": "Excel spreadsheet",
     "assets.mimetypes.application/vnd.ms-excel.sheet.macroEnabled.12": "Excel 2007 macro-enabled workbook",
     "assets.mimetypes.application/vnd.ms-powerpoint": "Powerpoint presentation",
@@ -1232,7 +1232,7 @@
     "core.areyousure": "Are you sure?",
     "core.back": "Back",
     "core.cancel": "Cancel",
-    "core.cannotconnect": "Cannot connect: Verify that you have correctly typed the URL and that your site uses Moodle 2.4 or later.",
+    "core.cannotconnect": "Cannot connect: Verify that you have correctly typed the URL and that your site uses TheBritishDiction 2.4 or later.",
     "core.cannotdownloadfiles": "File downloading is disabled. Please contact your site administrator.",
     "core.captureaudio": "Record audio",
     "core.capturedimage": "Taken picture.",
@@ -1276,9 +1276,9 @@
     "core.course": "Course",
     "core.course.activitydisabled": "Your organisation has disabled this activity in the mobile app.",
     "core.course.activitynotyetviewableremoteaddon": "Your organisation installed a plugin that is not yet supported.",
-    "core.course.activitynotyetviewablesiteupgradeneeded": "Your organisation's Moodle installation needs to be updated.",
+    "core.course.activitynotyetviewablesiteupgradeneeded": "Your organisation's TheBritishDiction installation needs to be updated.",
     "core.course.allsections": "All sections",
-    "core.course.askadmintosupport": "Contact the site administrator and tell them you want to use this activity with the Moodle Mobile app.",
+    "core.course.askadmintosupport": "Contact the site administrator and tell them you want to use this activity with the TheBritishDiction Mobile app.",
     "core.course.availablespace": " You currently have about {{available}} free space.",
     "core.course.confirmdeletemodulefiles": "Are you sure you want to delete these files?",
     "core.course.confirmdownload": "You are about to download {{size}}.{{availableSpace}} Are you sure you want to continue?",
@@ -1461,10 +1461,10 @@
     "core.login.auth_email": "Email-based self-registration",
     "core.login.authenticating": "Authenticating",
     "core.login.cancel": "Cancel",
-    "core.login.checksiteversion": "Check that your site uses Moodle 2.4 or later.",
+    "core.login.checksiteversion": "Check that your site uses TheBritishDiction 2.4 or later.",
     "core.login.confirmdeletesite": "Are you sure you want to delete the site {{sitename}}?",
     "core.login.connect": "Connect!",
-    "core.login.connecttomoodle": "Connect to Moodle",
+    "core.login.connecttomoodle": "Connect to TheBritishDiction",
     "core.login.contactyouradministrator": "Contact your site administrator for further help.",
     "core.login.contactyouradministratorissue": "Please ask your site administrator to check the following issue: {{$a}}",
     "core.login.createaccount": "Create my new account",
@@ -1483,21 +1483,21 @@
     "core.login.forgotten": "Forgotten your username or password?",
     "core.login.getanothercaptcha": "Get another CAPTCHA",
     "core.login.help": "Help",
-    "core.login.helpmelogin": "<p>There are many thousands of Moodle sites around the world. This app can only connect to Moodle sites that have specifically enabled Mobile app access.</p><p>If you can't connect to your Moodle site then you need to contact your site administrator and ask them to read <a href=\"http://docs.moodle.org/en/Mobile_app\" target=\"_blank\">http://docs.moodle.org/en/Mobile_app</a></p><p>To test the app in a Moodle demo site type <i>teacher</i> or <i>student</i> in the <i>Site address</i> field and click the <b>Connect button</b>.</p>",
+    "core.login.helpmelogin": "<p>There are many thousands of TheBritishDiction sites around the world. This app can only connect to TheBritishDiction sites that have specifically enabled Mobile app access.</p><p>If you can't connect to your TheBritishDiction site then you need to contact your site administrator and ask them to read <a href=\"http://docs.moodle.org/en/Mobile_app\" target=\"_blank\">http://docs.moodle.org/en/Mobile_app</a></p><p>To test the app in a TheBritishDiction demo site type <i>teacher</i> or <i>student</i> in the <i>Site address</i> field and click the <b>Connect button</b>.</p>",
     "core.login.instructions": "Instructions",
     "core.login.invalidaccount": "Please check your login details or ask your site administrator to check the site configuration.",
     "core.login.invaliddate": "Invalid date",
     "core.login.invalidemail": "Invalid email address",
-    "core.login.invalidmoodleversion": "Invalid Moodle version. The minimum version required is 2.4.",
+    "core.login.invalidmoodleversion": "Invalid TheBritishDiction version. The minimum version required is 2.4.",
     "core.login.invalidsite": "The site URL is invalid.",
     "core.login.invalidtime": "Invalid time",
     "core.login.invalidurl": "Invalid URL specified",
     "core.login.invalidvaluemax": "The maximum value is {{$a}}",
     "core.login.invalidvaluemin": "The minimum value is {{$a}}",
-    "core.login.legacymoodleversion": "You are trying to connect to an unsupported Moodle version. Please, download the Moodle Classic app to access this Moodle site.",
-    "core.login.legacymoodleversiondesktop": "You are trying to connect to <b>{{$a}}</b>.<br><br>This site is running an outdated unsupported version of Moodle which will not work with this Moodle Desktop App.<br><br>If this is your site please contact your local moodle partner to get assistance to update it.<br><br>See <a href=\"https://moodle.com/contact\">our contact page</a> to submit a request for assistance.",
+    "core.login.legacymoodleversion": "You are trying to connect to an unsupported TheBritishDiction version. Please, download the TheBritishDiction Classic app to access this TheBritishDiction site.",
+    "core.login.legacymoodleversiondesktop": "You are trying to connect to <b>{{$a}}</b>.<br><br>This site is running an outdated unsupported version of TheBritishDiction which will not work with this TheBritishDiction Desktop App.<br><br>If this is your site please contact your local moodle partner to get assistance to update it.<br><br>See <a href=\"https://moodle.com/contact\">our contact page</a> to submit a request for assistance.",
     "core.login.legacymoodleversiondesktopdownloadold": "<br><br>Alternatively, you can still access this site using an unsupported version of the app that can be downloaded from here.",
-    "core.login.localmobileunexpectedresponse": "Moodle Mobile Additional Features check returned an unexpected response. You will be authenticated using the standard mobile service.",
+    "core.login.localmobileunexpectedresponse": "TheBritishDiction Mobile Additional Features check returned an unexpected response. You will be authenticated using the standard mobile service.",
     "core.login.loggedoutssodescription": "You have to authenticate again. You need to log in to the site in a browser window.",
     "core.login.login": "Log in",
     "core.login.loginbutton": "Log in",
@@ -1509,7 +1509,7 @@
     "core.login.mobileservicesnotenabled": "Mobile access is not enabled on your site. Please contact your site administrator if you think it should be enabled.",
     "core.login.mustconfirm": "You need to confirm your account",
     "core.login.newaccount": "New account",
-    "core.login.newsitedescription": "Please enter the URL of your Moodle site. Note that it might not be configured to work with this app.",
+    "core.login.newsitedescription": "Please enter the URL of your TheBritishDiction site. Note that it might not be configured to work with this app.",
     "core.login.notloggedin": "You need to be logged in.",
     "core.login.password": "Password",
     "core.login.passwordforgotten": "Forgotten password",
@@ -1540,7 +1540,7 @@
     "core.login.siteinmaintenance": "Your site is in maintenance mode",
     "core.login.sitepolicynotagreederror": "Site policy not agreed.",
     "core.login.siteurl": "Site URL",
-    "core.login.siteurlrequired": "Site URL required i.e <i>http://www.yourmoodlesite.org</i>",
+    "core.login.siteurlrequired": "Site URL required i.e <i>https://thebritishdiction.com/lmsportal/</i>",
     "core.login.startsignup": "Create new account",
     "core.login.stillcantconnect": "Still can't connect?",
     "core.login.supplyinfo": "More details",
